syntax = "proto3";

option go_package = "proto/encounter-service";

import "google/protobuf/timestamp.proto";

service EncounterService {
  // UserExperience
  rpc Create(UserExperience) returns (StatusCodeResponse);
  rpc AddXP(AddXPRequest) returns (UserExperience);
  rpc GetXPByUserId(GetXPByUserIdRequest) returns (UserExperience);
  rpc Delete(DeleteRequest) returns (StatusCodeResponse);
}

message AddXPRequest {
  int32 id = 1;
  int32 xp = 2;
}

message GetXPByUserIdRequest {
  int32 userId = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message StatusCodeResponse {
  int32 statusCode = 1;
}

message UserExperience {
  int32 id = 1;
  int32 userId = 2;
  int32 experiencePoints = 3;
  int32 level = 4;
}
